fixed horizontal overflow on widget

--- a/app/assets/stylesheets/widget/widget.css.sass
+++ b/app/assets/stylesheets/widget/widget.css.sass
@@ -121,7 +121,7 @@ table
   float: left
   background-color: transparent
   // z-index: 9999999999
-  width: 306px
+  width: 318px
   height: 425px
   position: relative
   &:hover
